# pdf-cleaner-cli

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  cli.py  cli_status.py  main.py  version.py
src/batch/: __init__.py  processor.py  queue.py
src/chef/: __init__.py  base.py  docling_chef.py  markitdown_chef.py  pdfplumber_chef.py  pymupdf4llm_chef.py  pytesseract_chef.py  unstructured_chef.py
src/chunker/: __init__.py  base.py  heading_chunker.py  hybrid_chunker.py  layout_chunker.py  llm_guided_chunker.py  recursive_chunker.py  semantic_chunker.py  sentence_chunker.py  token_chunker.py
src/core/: __init__.py  discovery.py  pipeline.py  registry.py
src/extractors/: base.py  docling_extractor.py  markitdown_extractor.py  pdfplumber_extractor.py
src/fetcher/: __init__.py  base.py  local.py
src/genie/: __init__.py  base.py  ollama_genie.py  openai_genie.py
src/models/: chunk.py
src/pipeline/: __init__.py  batch_processor.py  pipeline.py
src/porter/: __init__.py  base.py  json_porter.py  markdown_porter.py  metadata_porter.py
src/processors/: chunker.py  contextualizer.py  deduplicator.py  normalizer.py  summarizer.py
src/profiles/: __init__.py  academic.py  adventure.py  auto.py  base.py  dnd.py  generic.py  rulebook.py
src/refinery/: __init__.py  base.py  contextual_refinery.py  deduplication_refinery.py  dnd_metadata_refinery.py  header_detector_refinery.py  header_reconstructor_refinery.py  heading_normalizer_refinery.py  rag_refinery.py  standardization_refinery.py  (+1 more)
(+6 files in other folders)
