[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-sanitizer-tool"
version = "0.1.0"
description = "Herramienta para sanitizar, extraer texto y generar chunks de PDFs"
readme = "README.md"
authors = [{name = "Fernando", email = "ferdonan@users.noreply.github.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "markitdown>=0.1.0",
    "pikepdf>=8.0.0",
    "pytesseract>=0.3.0",
    "pdf2image>=1.17.0",
]
requires-python = ">=3.10"

[project.scripts]
pdf-cleaner = "src.main:cli"
